...
            android:id="@+id/detail_LAY_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/detail_BTN_copy"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="3dp"
                android:insetTop="0dp"
...
                android:insetBottom="0dp"
                android:paddingHorizontal="4dp"
                android:textSize="12sp"
                android:text="@string/detail_action_site" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/detail_BTN_offer"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:insetTop="0dp"
...
