...
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_RCV_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="6dp"
            android:clipToPadding="false" />

        <com.google.android.material.textview.MaterialTextView
...
