...
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <GridLayout
            android:id="@+id/pref_LAY_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pref_BTN_save"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:text="@string/pref_save" />
</LinearLayout>
...
