...
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_RCV_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="6dp"
            android:clipToPadding="false"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/search_LBL_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:gravity="center"
            android:text="@string/search_prompt"
...
